<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/edit_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/edit_message" />

        <Button
            android:id="@+id/send_button_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_send"
            android:onClick="sendMessage"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/record_button_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_record"
            android:onClick="sendMessage"/>
        <Button
            android:id="@+id/play_button_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_play"
            android:onClick="sendMessage"/>
        <Button
            android:id="@+id/record_button_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_record"
            android:onClick="sendMessage"/>
        <Button
            android:id="@+id/play_button_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_play"
            android:onClick="sendMessage"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/record_button_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_record"
            android:onClick="sendMessage"/>
        <Button
            android:id="@+id/play_button_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_play"
            android:onClick="sendMessage"/>
        <Button
            android:id="@+id/record_button_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_record"
            android:onClick="sendMessage"/>
        <Button
            android:id="@+id/play_button_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_play"
            android:onClick="sendMessage"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/record_button_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_record"
            android:onClick="sendMessage"/>
        <Button
            android:id="@+id/play_button_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_play"
            android:onClick="sendMessage"/>
        <Button
            android:id="@+id/record_button_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_record"
            android:onClick="sendMessage"/>
        <Button
            android:id="@+id/play_button_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_play"
            android:onClick="sendMessage"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/record_button_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_record"
            android:onClick="sendMessage"/>
        <Button
            android:id="@+id/play_button_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_play"
            android:onClick="sendMessage"/>
        <Button
            android:id="@+id/record_button_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_record"
            android:onClick="sendMessage"/>
        <Button
            android:id="@+id/play_button_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_play"
            android:onClick="sendMessage"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/edit_order"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/enter_order" />

        <Button
            android:id="@+id/start_full_play_button_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_start"
            android:onClick="sendMessage"/>
    </LinearLayout>

</LinearLayout>
